--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,47 @@
+ale-py==0.11.2
+AutoROM==0.6.1
 box2d-py==2.3.5
+certifi==2025.11.12
+charset-normalizer==3.4.4
+click==8.3.1
 cloudpickle==3.1.1
 contourpy==1.3.3
 cycler==0.12.1
+decorator==5.2.1
 Farama-Notifications==0.0.4
 filelock==3.20.0
 fonttools==4.60.1
 fsspec==2025.9.0
 gymnasium==1.2.1
+idna==3.11
+ImageIO==2.37.2
+imageio-ffmpeg==0.6.0
 Jinja2==3.1.6
 kiwisolver==1.4.9
 MarkupSafe==3.0.3
 matplotlib==3.10.7
+moviepy==2.2.1
 mpmath==1.3.0
 networkx==3.5
-numpy==2.3.4
+numpy==2.2.6
+opencv-python==4.12.0.88
 packaging==25.0
-pillow==12.0.0
+pandas==2.3.3
+pillow==11.3.0
+proglog==0.1.12
 pygame==2.6.1
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+pytz==2025.2
+requests==2.32.5
+seaborn==0.13.2
 setuptools==80.9.0
 six==1.17.0
 swig==4.3.1.post0
 sympy==1.14.0
 torch==2.9.0
+tqdm==4.67.1
 typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
