--- a/global_config-pong-a2c.json
+++ b/global_config-pong-a2c.json
@@ -7,6 +7,7 @@
 
     "learning_rate": 0.0007, 
     "gamma": 0.99,
+    "n_step": 5,
     "entropy_coef": 0.01,
     "value_loss_coef": 0.5,
     "max_grad_norm": 0.5,
