added obstacles, adjusted rewards.

--- a/inventory-clerk/results/retail_store/retail_store_config/sarsa_avg_-3891.92_success_0.0_20251202_001322/retail_store_config.json
+++ b/inventory-clerk/results/retail_store/retail_store_config/sarsa_avg_-3891.92_success_0.0_20251202_001322/retail_store_config.json
@@ -8,8 +8,8 @@
   "min_epsilon": 0.01,
   "decay_rate": 0.0001,
   "use_boltzmann": false,
-  "display_episodes": 54000,
-  "enable_customers": false,
+  "display_episodes": 30000,
+  "enable_customers": true,
   "seed": 42
 }
 
